--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -26,3 +26,10 @@ body {
 .form-signin .form-floating:focus-within {
   z-index: 2;
 }
+
+.app-container {
+  width: 100%;
+  max-width: 600px;
+  padding: 15px;
+  margin: 1em auto;
+}
