--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -1,127 +1,124 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
+<th:block th:replace="fragments :: header"></th:block>
+<th:block th:insert="fragments::navbar"></th:block>
 
-<body>
-<nav th:replace="fragments::navbar"></nav>
+<div class="signin-container">
+    <main class="form-signin text-center">
+        <form method="post" th:object="${task}">
+            <h1 class="display-1"><th:block th:insert="fragments :: brandLogo"></th:block></h1>
+            <h1 class="h1 my-3 fw-bold" th:insert="fragments :: appName"></h1>
+            <h1 class="h3 my-3 fw-bold" th:text="${title}"></h1>
 
-<section class=" logged-in-section  " style="height: 93vh">
-    <div class="container py-5 h-100">
-        <div class="row  justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card list-card text-white shadow-lg" style="border-radius: 1rem;">
-                    <h1 class="text-black p-4" th:text="${title}"></h1>
-                    <div class="createTask-view card-body col-10 col-md-7 col-lg-9 col-xl-9  p-2 text-center">
-                        <div class=" mb-md-2 mt-3 ">
-                            <form class="text-black" method="post">
-
-                                <div class="form-outline form-black  mb-0">
-                                    <input type="text" id="taskName" class="form-control form-control-lg "
-                                           th:field="${task.name}"/>
-                                    <label class="form-label" for="taskName">Task Name:</label>
-                                    <div class="form-notch">
-                                        <div class="form-notch-leading" style="width: 9px;"></div>
-                                        <div class="form-notch-middle" style="width: 65px;"></div>
-                                        <div class="form-notch-trailing"></div>
-                                    </div>
-                                </div>
-
-                                <div class="form-outline mb-0 mt-2">
-                                    <span th:errors="${task.name}"
-                                          class="error_span text-danger justify-content-end "></span>
-                                </div>
-
-                                <div class="form-outline form-black mt-4 mb-0">
-                                    <input type="number" min="0" id="time" class="form-control form-control-lg "
-                                           th:field="${task.timeRequired}" required/>
-                                    <label class="form-label" for="time">Time required</label>
-                                    <div class="form-notch">
-                                        <div class="form-notch-leading" style="width: 9px;"></div>
-                                        <div class="form-notch-middle" style="width: 90px;"></div>
-                                        <div class="form-notch-trailing"></div>
-                                    </div>
-                                </div>
-                                <div class="form-outline  mb-0 mt-2">
-                                    <span th:errors="${task.timeRequired}"
-                                          class="error_span text-danger justify-content-end "></span>
-                                </div>
-
-                                <div class="form-outline form-black mt-4 mb-0">
-                                    <input type="date" id="dueDate" class="form-control form-control-lg "
-                                           th:field="${{task.dueDate}}">
-                                    <label class="form-label" for="dueDate">Due Date</label>
-
-                                    <div class="form-notch">
-                                        <div class="form-notch-leading" style="width: 9px;"></div>
-                                        <div class="form-notch-middle" style="width: 90px;"></div>
-                                        <div class="form-notch-trailing"></div>
-                                    </div>
-                                </div>
-                                <div class="form-outline  mb-0 mt-2">
-                                    <span th:errors="${{task.dueDate}}"
-                                          class="error_span text-danger justify-content-end "></span>
-                                </div>
-
-                                <div class="form-outline form-black mt-4 mb-0">
-
-                                    <label>Priority (optional):
-                                        <select th:replace="fragments :: selectPriority"></select>
-                                    </label>
-                                    <div class="form-notch">
-                                        <div class="form-notch-leading" style="width: 9px;"></div>
-                                        <div class="form-notch-middle" style="width: 90px;"></div>
-                                        <div class="form-notch-trailing"></div>
-                                    </div>
-                                </div>
-                                <div class="form-outline  mb-0 mt-2">
-                                    <span th:errors="${task.priority}"
-                                          class="error_span text-danger justify-content-end "></span>
-                                </div>
-
-                                <div th:if="${#lists.size(tags) > 0}">
-                                    <h3>Tags (optional):</h3>
-                                    <th:block th:each="tag : ${tags}">
-                                        <div class="form-check form-check-inline">
-                                            <input type="checkbox" th:field="${task.tags}" th:value="${tag.id}" class="form-check-input">
-                                            <label class="form-check-label" th:for="${#ids.prev('tags')}" th:text="${tag.name}"></label>
-                                        </div>
-                                    </th:block>
-                                </div>
-
-                                <button class="btn btn-outline-dark mt-4 btn-sm px-5" type="submit"
-                                        th:text="${btnName}"></button>
-
-                            </form>
-
-                        </div>
-                    </div>
+            <div th:if="${#fields.hasAnyErrors()}" class="card my-2">
+                <div class="card-body text-start text-danger">
+                    <i class="bi bi-exclamation-circle-fill"></i>
+                    <span>Username or Password is not valid</span>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <script>
-        const inputs = document.querySelectorAll("input");
+            <div class="form-floating mb-2">
+                <input type="text" class="form-control" id="name" placeholder="name" th:field="*{name}">
+                <label for="name">Task name</label>
+            </div>
+
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <p class="mt-2 text-muted">Don't have an account? <a th:href="@{signup}">Sign Up</a></p>
+        </form>
+    </main>
+</div>
+
+<th:block th:replace="fragments :: footer"></th:block>
+
+<!--                                <div class="form-outline form-black mt-4 mb-0">-->
+<!--                                    <input type="number" min="0" id="time" class="form-control form-control-lg "-->
+<!--                                           th:field="${task.timeRequired}" required/>-->
+<!--                                    <label class="form-label" for="time">Time required</label>-->
+<!--                                    <div class="form-notch">-->
+<!--                                        <div class="form-notch-leading" style="width: 9px;"></div>-->
+<!--                                        <div class="form-notch-middle" style="width: 90px;"></div>-->
+<!--                                        <div class="form-notch-trailing"></div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="form-outline  mb-0 mt-2">-->
+<!--                                    <span th:errors="${task.timeRequired}"-->
+<!--                                          class="error_span text-danger justify-content-end "></span>-->
+<!--                                </div>-->
+
+<!--                                <div class="form-outline form-black mt-4 mb-0">-->
+<!--                                    <input type="date" id="dueDate" class="form-control form-control-lg "-->
+<!--                                           th:field="${{task.dueDate}}">-->
+<!--                                    <label class="form-label" for="dueDate">Due Date</label>-->
+
+<!--                                    <div class="form-notch">-->
+<!--                                        <div class="form-notch-leading" style="width: 9px;"></div>-->
+<!--                                        <div class="form-notch-middle" style="width: 90px;"></div>-->
+<!--                                        <div class="form-notch-trailing"></div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="form-outline  mb-0 mt-2">-->
+<!--                                    <span th:errors="${{task.dueDate}}"-->
+<!--                                          class="error_span text-danger justify-content-end "></span>-->
+<!--                                </div>-->
+
+<!--                                <div class="form-outline form-black mt-4 mb-0">-->
+
+<!--                                    <label>Priority (optional):-->
+<!--                                        <select th:replace="fragments :: selectPriority"></select>-->
+<!--                                    </label>-->
+<!--                                    <div class="form-notch">-->
+<!--                                        <div class="form-notch-leading" style="width: 9px;"></div>-->
+<!--                                        <div class="form-notch-middle" style="width: 90px;"></div>-->
+<!--                                        <div class="form-notch-trailing"></div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="form-outline  mb-0 mt-2">-->
+<!--                                    <span th:errors="${task.priority}"-->
+<!--                                          class="error_span text-danger justify-content-end "></span>-->
+<!--                                </div>-->
+
+<!--                                <div th:if="${#lists.size(tags) > 0}">-->
+<!--                                    <h3>Tags (optional):</h3>-->
+<!--                                    <th:block th:each="tag : ${tags}">-->
+<!--                                        <div class="form-check form-check-inline">-->
+<!--                                            <input type="checkbox" th:field="${task.tags}" th:value="${tag.id}" class="form-check-input">-->
+<!--                                            <label class="form-check-label" th:for="${#ids.prev('tags')}" th:text="${tag.name}"></label>-->
+<!--                                        </div>-->
+<!--                                    </th:block>-->
+<!--                                </div>-->
+
+<!--                                <button class="btn btn-outline-dark mt-4 btn-sm px-5" type="submit"-->
+<!--                                        th:text="${btnName}"></button>-->
+
+<!--                            </form>-->
+
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--    <script>-->
+<!--        const inputs = document.querySelectorAll("input");-->
 
 
 
-        inputs.forEach(e => {
-            if (e.value) {
-                e.classList.add('active');
-            }
-        });
+<!--        inputs.forEach(e => {-->
+<!--            if (e.value) {-->
+<!--                e.classList.add('active');-->
+<!--            }-->
+<!--        });-->
 
-        inputs.forEach(el => {
-            el.addEventListener('blur', e => {
-                if (e.target.value) {
-                    e.target.classList.add('active');
-                } else {
-                    e.target.classList.remove('active')
-                }
-            })
-        });
-    </script>
-</section>
+<!--        inputs.forEach(el => {-->
+<!--            el.addEventListener('blur', e => {-->
+<!--                if (e.target.value) {-->
+<!--                    e.target.classList.add('active');-->
+<!--                } else {-->
+<!--                    e.target.classList.remove('active')-->
+<!--                }-->
+<!--            })-->
+<!--        });-->
+<!--    </script>-->
+<!--</section>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
