--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -7,7 +7,7 @@
     <div class="card my-2 shadow-lg">
         <h2 class="h3 card-header fw-bold text-center" th:text="${title}"></h2>
         <div class="card-body table-responsive">
-            <a class="w-100 btn btn-primary mb-2" th:href="@{/tasks/create}">Create a New Task</a>
+            <a class="w-100 btn btn-primary mb-2" th:href="@{/tasks/create}"><i class="bi bi-plus-circle"></i> Create a New Task</a>
             <table class="table align-middle">
                 <caption>List of tasks</caption>
                 <thead>
