--- a/src/main/resources/templates/tasklist/list.html
+++ b/src/main/resources/templates/tasklist/list.html
@@ -1,29 +1,56 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
-<body>
-<nav th:replace="fragments::navbar"></nav>
+<th:block th:replace="fragments :: header"></th:block>
+<th:block th:insert="fragments::navbar"></th:block>
 
-<table>
-    <tr>
-        <th colspan="2">Task name</th>
-    </tr>
-    <tr th:each="task : ${tasks}">
-        <td>
-            <span th:if="${task.isComplete}" style="text-decoration: line-through"><a th:href="${'/tasks/'+ task.id}" th:text="${task.name}"></a></span>
-            <span th:unless="${task.isComplete}"><a th:href="${'/tasks/'+ task.id}" th:text="${task.name}"></a></span>
-        </td>
-        <td th:text="${task.timeRequired}"></td>
-        <td th:text="${task.priority.displayName}"></td>
-        <td>
-        </td>
-    </tr>
-</table>
-<h1 th:text="${tasklist}"></h1>
-<ul>
-    <li th:each="task : ${tasks}"><a th:replace="fragments :: displayTaskWithLink"></a> <span th:replace="fragments :: displayRequiredTime"></span></li>
-</ul>
+<main class="app-container">
+    <h1 class="display-1 text-center"><th:block th:insert="fragments :: brandLogo"></th:block></h1>
+    <h1 class="h1 my-3 fw-bold text-center" th:insert="fragments :: appName"></h1>
+    <div class="card my-2 shadow-lg">
+        <h2 class="h3 card-header fw-bold text-center" th:text="${title}"></h2>
+        <div class="card-body">
+            <ul>
+                <li>
+                    <h4></h4>
+                    <ul>
+                        <li>Due Date: </li>
+                        <li>Priority: </li>
+                        <li>Due Date: </li>
+                    </ul>
+                </li>
+            </ul>
+            <table class="table align-middle">
+                <caption>List of tasks</caption>
+                <thead>
+                <tr>
+                    <th scope="col">Task</th>
+                    <th scope="col">Task List</th>
+                    <th scope="col">Due Date</th>
+                    <th scope="col">Priority</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="task : ${tasks}">
+                    <td scope="row">
+                        <a th:href="|/tasks/${task.id}|" th:title="${task.isComplete} ? 'Mark as Not Completed' : 'Mark as Completed'"><i th:class="${task.isComplete} ? 'bi bi-check-circle-fill text-success' : 'bi bi-check-circle-fill text-secondary'"></i></a>
+                        <span th:replace="fragments :: displayTask"></span>
+                        (<span th:replace="fragments :: displayRequiredTime"></span> minutes)
+                    </td>
+                    <td th:text="${task.getTasklists().size() > 0} ? ${task.getTasklists().get(0).name} : 'None'"></td>
+                    <td><span th:replace="fragments :: displayDueDate"></span></td>
+                    <td><span th:replace="fragments :: displayPriority"></td>
+                    <td>
+                        <a th:href="${'/tasks/'+ task.id + '/edit'}" class="btn btn-sm btn-success d-block w-100 mb-1"><i class="bi bi-pencil"></i> Edit</a>
+                        <form method="post" action="/tasks/delete">
+                            <input type="hidden" name="id" th:value="${task.id}">
+                            <button class="btn btn-danger btn-sm d-block w-100"><i class="bi bi-trash"></i> Delete</button>
+                        </form>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <a class="w-100 btn btn-primary mb-2" th:href="@{/tasklist/generator}"><i class="bi bi-plus-circle"></i> Create a New Task List</a>
+        </div>
+    </div>
+</main>
 
-
-</body>
-</html>
+<th:block th:replace="fragments :: footer"></th:block>
