--- a/src/main/resources/templates/tasks/default.html
+++ b/src/main/resources/templates/tasks/default.html
@@ -7,7 +7,7 @@
     <div class="card my-2 shadow-lg">
         <h2 class="h3 card-header fw-bold text-center" th:text="${title}"></h2>
         <div class="card-body table-responsive">
-            <a class="w-100 btn btn-primary mb-2" th:if="${user.admin}" th:href="@{/admin/default-create}">Create a New Task from Default Tasks</a>
+            <a class="w-100 btn btn-primary mb-2" th:if="${user.admin}" th:href="@{/admin/default-create}"><i class="bi bi-plus-circle"></i> Create a New Default Task</a>
             <table class="table align-middle">
                 <caption>List of default tasks</caption>
                 <thead>
